# BioOKF

./: .gitignore  .mcp.json  AUTHORS.md  Ingestion_WF.md  Merge_KBs_WF.md  README.md  SCHEMA.md  SPEC.md  cloud.md  schema.md
app/studio/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
app/studio/src-tauri/icons/: icon.icns
app/studio/src-tauri/src/: main.rs  mcp_guest.js
studio/: Cargo.toml  ISSUES.md  TESTING.md
studio/.claude-plugin/: marketplace.json  plugin.json
studio/app/src-tauri/: Cargo.toml  tauri.conf.json
studio/app/src-tauri/capabilities/: default.json
studio/app/src-tauri/src/: main.rs
studio/app/tests/: visual.spec.mjs
studio/crates/bokf-cli/: Cargo.toml
studio/crates/bokf-cli/src/: main.rs
studio/crates/bokf-cli/tests/: cli.rs
studio/crates/bokf-core/: Cargo.toml
studio/crates/bokf-core/src/: bundle.rs  convert.rs  export.rs  figures.rs  git.rs  index.rs  lib.rs  lint.rs  log_sync.rs  merge.rs  model.rs  parse.rs  pdf_coverage.rs  pdf_figures.rs  pdf_text.rs  validate.rs
studio/crates/bokf-core/src/credibility/: allowlist.rs  crossref.rs  host_patterns.rs  identifiers.rs  mod.rs  openalex.rs  text_signal.rs
studio/crates/bokf-core/tests/: active.rs  examples.rs  version.rs
studio/crates/bokf-mcp/: Cargo.toml
studio/crates/bokf-mcp/src/: instructions.rs  main.rs  ops.rs  studio_client.rs
studio/crates/okf-cli/: Cargo.toml
studio/crates/okf-cli/src/: main.rs
studio/crates/okf-cli/tests/: cli.rs
studio/crates/okf-core/: Cargo.toml
studio/crates/okf-core/src/: active.rs  export.rs  git.rs  graph.rs  lib.rs  lint.rs  model.rs  parse.rs  search.rs  validate.rs
studio/crates/okf-core/tests/: active.rs  examples.rs  version.rs
studio/crates/okf-mcp/: Cargo.toml
studio/crates/okf-mcp/src/: instructions.rs  main.rs  ops.rs
studio/hooks/: guard-raw.sh  hooks.json  lib.sh  post-write-lint.sh  session-start.sh  stop-verify.sh
studio/hooks/tests/: test-hooks.sh
studio/skills/about-biookf/: SKILL.md
studio/skills/biookf-convert/: SKILL.md
studio/skills/biookf-ingest/: SKILL.md
studio/skills/biookf-lint/: SKILL.md
studio/skills/biookf-merge/: SKILL.md
studio/skills/biookf-query/: SKILL.md
studio/skills/biookf-verify/: SKILL.md
studio/skills/biookf-version/: SKILL.md
studio/test-kb/demo-statins-crc/: index.md  log.md
studio/test-kb/demo-statins-crc/knowledge/dataset/: drugbank.md
studio/test-kb/demo-statins-crc/knowledge/disease/: colorectal-cancer.md
studio/test-kb/demo-statins-crc/knowledge/gene/: hmgcr.md
studio/test-kb/demo-statins-crc/knowledge/molecule/: atorvastatin.md
studio/test-kb/demo-statins-crc/knowledge/publication/: statin-antitumor-preprint.md  statin-crc-cohort.md
studio/test-kb/demo-statins-crc/raw/statin-antitumor-preprint/: meta.yaml  source.md
studio/test-kb/demo-statins-crc/raw/statin-crc-cohort/: meta.yaml  source.md
studio/test-kb/fungal-impacts-earth-ecosystems/: index.md  log.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/BiologicalPathway/: carbon-sequestration.md  nutrient-cycling.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/Disease/: candidiasis.md  chytridiomycosis.md  coccidioidomycosis.md  cryptococcosis.md  invasive-aspergillosis.md  wheat-blast.md  white-nose-syndrome.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/Exposure/: climate-change.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/GeographicLocation/: western-united-states.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/MolecularClass/: azole-antifungals.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/Molecule/: amphotericin-b.md  fluconazole.md  melanin.md  penicillin.md  psilocybin.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/Organism/: aspergillus-fumigatus.md  batrachochytrium-dendrobatidis.md  candida-auris.md  coccidioides.md  cryptococcus-gattii.md  fungal-kingdom.md  magnaporthe-oryzae.md  pseudogymnoascus-destructans.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/Phenotype/: amphibian-population-decline.md  antifungal-drug-resistance.md  bat-population-decline.md  crop-yield-loss.md  ionizing-radiation-tolerance.md
studio/test-kb/fungal-impacts-earth-ecosystems/knowledge/Publication/: case-2025-fungal-impacts-review.md
studio/test-kb/fungal-impacts-earth-ecosystems/raw/: source.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/: SCHEMA.md  index.md  log.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/Anatomy/: colonic-epithelium.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/BiologicalFunction/: histone-deacetylase-activity.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/BiologicalPathway/: antitumor-immune-response.md  genotoxicity.md  il23-il17-inflammatory-axis.md  nf-kb-signaling-pathway.md  wnt-signaling-pathway.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/Concept/: gut-microbiota-dysbiosis.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/Disease/: colorectal-cancer.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/Exposure/: low-fiber-diet.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/Food/: dietary-fiber.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/MethodOrProcedure/: gnotobiotic-fmt-mouse-model.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/knowledge/Molecule/: bacteroides-fragilis-toxin.md  butyrate.md  colibactin.md  deoxycholic-acid.md  e-cadherin.md  fada-adhesin.md  fap2.md  gpr109a.md  interleukin-22.md  tigit.md
studio/test-kb/host-microbiota-maladaptation-colorectal-cancer/raw/: source.md
studio/test-kb/integrative-biology-type-diabetes/: index.md  log.md  schema.md
studio/test-kb/view-drug-resistance-cancer/: index.md  log.md
studio/test-kb/view-drug-resistance-cancer/knowledge/gene/: braf.md  (+4 more)
studio/test-kb/view-drug-resistance-cancer/raw/: source.md
(+5019 files in other folders)
