[workspace]
members = ["crates/okf-core", "crates/okf-cli", "crates/okf-mcp", "app/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
description = "BioOKF Studio — an MCP server, CLI, and visualizer for BioOKF knowledge bases"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
regex = "1.12"
clap = { version = "4.6", features = ["derive"] }
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1.49", features = ["full"] }
schemars = "1.2"

[profile.release]
strip = true
