[package]
name = "biookf-studio"
version = "0.1.0"
edition = "2021"
description = "BioOKF Studio — Tauri desktop visualizer over bokf-core"
license = "Apache-2.0"

[[bin]]
name = "biookf-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bokf-core = { path = "../../crates/bokf-core" }
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

# Debug-only MCP control plane to let an AI agent drive/inspect the webview.
# Off by default (a git dependency); enable with `--features debug-mcp`.
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", optional = true }

[features]
default = []
debug-mcp = ["dep:tauri-plugin-mcp"]
