[package]
name = "bokf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "bokf — the BioOKF command-line tool (lint, graph, search, scaffold)"

[[bin]]
name = "bokf"
path = "src/main.rs"

[dependencies]
bokf-core = { path = "../bokf-core" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
