[package]
name = "bokf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for BioOKF: parse, normalize, graph, lint, and search a BioOKF bundle"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
calamine = "0.26"
html2md = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

[dev-dependencies]
tempfile = "3"
