[package]
name = "bokf-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "bokf-mcp — the BioOKF MCP server (stdio) that AI tools drive"

[[bin]]
name = "bokf-mcp"
path = "src/main.rs"

[dependencies]
bokf-core = { path = "../bokf-core" }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
