[package]
name = "okf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for BioOKF: parse, normalize, graph, lint, and search a BioOKF bundle"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
