[package]
name = "okf-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "okf-mcp — the BioOKF MCP server (stdio) that AI tools drive"

[[bin]]
name = "okf-mcp"
path = "src/main.rs"

[dependencies]
okf-core = { path = "../okf-core" }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
